# keyrock-aggregator

./: Cargo.toml  README.md  build.rs
3D_order_book/: build.sh  envoy.yaml  package-lock.json  package.json
3D_order_book/public/: index.html
3D_order_book/src/: BookAnimation.ts  FeedManager.ts  L2Book.ts  index.ts  instruments.ts
3D_order_book/src/feedhandlers/: AggrFeedHandler.ts  GFeedhandler.ts
benches/deserialize/: main.rs
src/: client.rs  exchange.rs  lib.rs  orderbook.rs  server.rs
src/ws/: binance.rs  bitstamp.rs  error.rs  mod.rs  models.rs  utils.rs
